<resources>
    <string name="app_name">The Last Airbender</string>
    <string name="app_creator">Rodriguez Gomez Oliver Eduardo</string>
    <string name="date">November, 2020</string>

    <!-- Activities -->
    <string name="act_characters">Characters</string>
    <string name="act_character">Character</string>
    <string name="act_characterSearch">Character by Name</string>
    <string name="act_avatars">Avatars</string>
    <string name="act_about">About</string>

    <!-- Gender -->
    <string name="character_gender">Gender</string>
    <string name="character_weapon">Weapon</string>
    <string name="character_affiliation">Affiliation</string>
    <string name="character_profession">Profession</string>
    <string name="character_position">Position</string>

    <!-- Character Card -->
    <string name="card_affiliation">Affiliation</string>
    <string name="card_position">Position</string>
    <string name="card_Weapon">Weapon</string>
    <string name="card_">abc</string>

    <!-- Avatar Card -->
    <string name="avatar_enemies">Enemies</string>
    <string name="avatar_predecessor">Predecessor</string>
    <string name="avatar_">abc</string>

    <!-- Actions -->
    <string name="search">Search</string>
    <string name="searchHint">Type a name here...</string>

    <!-- About -->
    <string name="school">School</string>
    <string name="school_name">INSTITUTO TECNOLOGICO NACIONAL DE MEXICO (Campus Culiacan)</string>
    <string name="subject">Subject</string>
    <string name="subject_name">Desarrollo de Aplicaciones para Dispositivos Moviles</string>
    <string name="teacher">Teacher</string>
    <string name="teacher_name">Gonzalez Hernandez Francisco</string>
    <string name="assignment">Assignment</string>
    <string name="assignment_name">Diseño y Creación de aplicación que consuma una API RESTful</string>
    <string name="student">Student</string>
</resources>